--- a/website-skeleton/config/packages/framework.yaml
+++ b/website-skeleton/config/packages/framework.yaml
@@ -1,6 +1,6 @@
 framework:
     secret: '%env(APP_SECRET)%'
-    #default_locale: en
+    default_locale: en
     #csrf_protection: true
     #http_method_override: true
 
@@ -15,3 +15,5 @@ framework:
     #fragments: true
     php_errors:
         log: true
+    templating:
+        engines: ['twig']
