Added login and register forms.

--- a/website-skeleton/config/packages/fos_user.yaml
+++ b/website-skeleton/config/packages/fos_user.yaml
@@ -5,3 +5,6 @@ fos_user:
     from_email:
         address:        noreply@ioana.test
         sender_name:    Ioana Hazsda
+    registration:
+        form:
+          type: AppBundle\Form\RegistrationType
