--- a/website-skeleton/config/packages/security.yaml
+++ b/website-skeleton/config/packages/security.yaml
@@ -1,11 +1,24 @@
 security:
     encoders:
         FOS\UserBundle\Model\UserInterface: sha512
+        Symfony\Component\Security\Core\User\User:
+            algorithm:   sha1
+            iterations: 1
+            encode_as_base64: false
     role_hierarchy:
-            ROLE_ADMIN:       ROLE_USER
-            ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
     providers:
-        in_memory: { memory: ~ }
+        chain_provider:
+            chain:
+                providers: [in_memory, fos_userbundle]
+        in_memory:
+            memory:
+                users:
+                    admin:
+                        password: 74913f5cd5f61ec0bcfdb775414c2fb3d161b620
+                        roles: 'ROLE_ADMIN'
+        # adminpass as password
         fos_userbundle:
             id: fos_user.user_provider.username_email
     firewalls:
@@ -13,14 +26,17 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
             pattern: ^/
             form_login:
-                provider: fos_userbundle
+                default_target_path: /
+                provider: chain_provider
                 csrf_token_generator: security.csrf.token_manager
-            logout: true
+            logout:       true
+            anonymous:    true
+    # Easy way to control access for large sections of your site
+    # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
